refatorando API para adequação de uso
