# app.js
@@ -3,7 +3,7 @@ const bodyParser = require('body-parser');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
 const index = require('./src/routes/index');
-const messageRoute = require('./src/routes/messageRoute');
+const artistRoute = require('./src/routes/artistRoute');
 const authRoute = require('./src/routes/authRoute');
 const ufRoute = require('./src/routes/ufRoute');
 const cors = require('cors');
@@ -19,7 +19,7 @@ app.use(bodyParser.json());
 
 app.use('/', index);
 app.use('/api-doc', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
-app.use('/message', messageRoute);
+app.use('/artist', artistRoute);
 app.use('/auth', authRoute);
 app.use('/uf', ufRoute);
 app.use(cors());
