# src/routes/authRoute.js
@@ -4,7 +4,8 @@ const verifyToken = require ('../shared/util/verify-token');
 
 const router = express.Router();
 
-router.post('/', controller.post);
+router.post('/', controller.login);
+router.post('/register', controller.newUser);
 router.get('/verify', verifyToken, controller.get);
 
 module.exports = router;
